--- a/index.html
+++ b/index.html
@@ -187,7 +187,18 @@
             </a>
           </div>
         </div>
-
+        <div class="row row-cols-2 row-cols-md-2 mb-2">
+            <div class="col">
+              <a href="/#/podcast">
+                <div class="card bg-dark text-white">
+                  <img class="card-img" src="teach.jpg" alt="Card image" />
+                  <div class="card-img-overlay">
+                    <h1 class="card-title">Podcasts</h1>
+                    <p class="card-text">Kogspace Podcasts.</p>
+                  </div>
+                </div>
+              </a>
+            </div>
         <h1>
           <a href="http://www.linkedin.com/in/johntango"
             ><i class="bi bi-linkedin"></i
