--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html lang="en">
+  <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
