--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html lang="en">
-
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="auto">
 
   <head>
     <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
