--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en" data-bs-theme="dark">
 
   <head>
     <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
@@ -16,18 +16,15 @@
 
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    />
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
 
     <!-- Custom styles for this template -->
     <link href="assets/css/styles.css" rel="stylesheet" />
+    
     <title>John R Williams</title>
   </head>
 
@@ -35,6 +32,7 @@
     <!-- ---------------------------- -->
     <!--     Navbar and svg icons     -->
     <!-- ---------------------------- -->
+   
     <abel-svgicons></abel-svgicons>
     <abel-navbar>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
