Fix navigation item for books to read

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#/podcast">Podcast</a>
               </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#/books to read">Podcast</a>
+              </li>
             </ul>
           </div>
         </div>
