--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </li>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#/books to read">Podcast</a>
+                <a class="nav-link" href="#/books">Books</a>
               </li>
             </ul>
           </div>
